SPRING FRAMEWORK CHANGELOG
==========================
$Id: changelog.txt,v 1.172 2004-06-24 14:43:32 jhoeller Exp $


Changes in version 1.1 RC1 (11.7.2004)
--------------------------------------

Package org.springframework.aop
* fixed debug log statements to avoid invocation of "toString" method on target (not supported e.g. by Axis proxy)

Package org.springframework.beans
* BeanUtils' "instantiateClass" methods try to set the constructors accessible if given non-accessible constructors
* factored out PropertyAccessor base interface from BeanWrapper
* BeanWrapperImpl supports dots in keys, for example "map[my.key]"
* refined BeanWrapperImpl to apply a custom editor strictly either to an array/Collection or to each of their elements
* refined BeanWrapperImpl to automatically convert a value to an array with a single component when necessary
* refined BeanWrapperImpl to support converting any Collection into an array rather than just a List
* fixed PropertiesEditor's support for converting a Map to Properties
* fixed PropertyPlaceholderConfigurer's parsing to detect all inner bean definitions (including BeanDefinitionHolder)
* added ArgumentConvertingMethodInvoker subclass of MethodInvoker, converting given arguments via BeanWrapperImpl
* MethodInvokingFactoryBean derives from ArgumentConvertingMethodInvoker to inherit argument conversion
* fixed MethodInvokingFactoryBean's singleton initialization to properly allow for circular reference detection
* fixed PropertyPlaceholderConfigurer's circular reference detection to allow repeated placeholder in single value
* PropertyPlaceholderConfigurer and PropertiesFactoryBean respect the defaults of a given Properties instance
* AbstractAutowireCapableBeanFactory's "autowireConstructor" regards all constructors, just preferring public ones
* reworked root/child bean definition concept, allowing to override any settings in a child (including class name)